# akasha

./: .gitignore  Cargo.nix  Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: rust.yml
src/: bigdurations.rs  calc_db.rs  display_volume.rs  main.rs  microphone.rs  noise_filter.rs  printrn.rs  quitmsg.rs  record.rs  write_audio.rs
